test/files/invalid/array_sizes.fbs
struct Foo {
  x: [bool: -1];
  y: [bool: 99999999999999999];
}